# demo-task-manager-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  database.sql  docker-compose.yaml  task.json
src/: config.rs  db.rs  erros.rs  handlers.rs  main.rs  models.rs
