[package]
name = "demo-task-manager-service"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
config = "0.13.3"
deadpool-postgres = { version = "0.11.0", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.10"
